# CMakeLists

./: CMakeLists.txt  README.md  build.sh  main.cpp
hello/: CMakeLists.txt
hello/include/: hello.h
hello/source/: hello.cpp
project/: .cproject  .project
world/: CMakeLists.txt
world/include/: world.h
world/source/: world.cpp
